# optimizer-service

./: .env  Cargo.toml  README.md  config.yml  docker-compose.yml
caddy/: Caddyfile
getway/: config.yml  go.mod  go.sum
getway/adapter/adapter-optimizer/: optimizer.go
getway/cmd/http/: main.go
getway/config/: config.go
getway/delivery/httpserver/: healthcheck.go  httpserver.go
getway/delivery/httpserver/imagehandler/: handler.go
getway/delivery/httpserver/middleware/: auth.go
getway/param/imageparam/: param.go
getway/param/userparam/: login_user.go  user.go
getway/pkg/httpmsg/: mapper.go
getway/repository/mysql/: db.go  table.sql
getway/repository/mysql/mysqlimage/: image.go
getway/repository/mysql/mysqluser/: user.go
getway/service/authservice/: service.go
getway/service/imageservice/: service.go
getway/validator/imagevalidator/: sign_url.go  validator.go
getway/validator/uservalidator/: register.go  validator.go
image-optimizer/: Cargo.toml  config.yml
image-optimizer/src/: container.rs  lib.rs
image-optimizer/src/api/http/: mod.rs
image-optimizer/src/api/queue/: nats.rs  rabbitmq.rs
image-optimizer/src/domain/: error.rs
image-optimizer/src/domain/entity/: image.rs  mod.rs
image-optimizer/src/domain/param/: authorization_service_param.rs  file_storage_service_param.rs  image_service_param.rs  token_service_param.rs
image-optimizer/src/domain/queue/: image_queue.rs
image-optimizer/src/domain/service/: authorization_service.rs  file_storage_service.rs  image_service.rs  mod.rs  optimizer_service.rs  token_service.rs
image-optimizer/src/infra/queue/nats/: image_queue.rs
image-optimizer/src/infra/queue/rabbitmq/: image_queue.rs
image-optimizer/src/service/: authorization_service.rs  image_service.rs  mod.rs  token_service.rs
image-optimizer/src/service/file_storage_service/: minio.rs
image-optimizer/src/service/optimizer_service/: mod.rs  rimage.rs
src/: app_config.rs  config.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/command/: mod.rs
src/api/http/: create_app.rs  error_mapper.rs  mod.rs
src/api/queue/: mod.rs  nats.rs  rabbitmq.rs
src/domain/: error.rs  mod.rs
src/domain/constant/: file_status.rs
src/domain/entity/: image.rs  image_specification.rs
src/domain/param/: authorization_service_param.rs  file_storage_service_param.rs  image_service_param.rs  mod.rs  optimizer_service_param.rs  sign_url_service_param.rs  token_service_param.rs
src/domain/queue/: image_queue.rs  mod.rs
src/domain/repository/: image_repository.rs  mod.rs
src/domain/service/: authorization_service.rs  image_service.rs  mod.rs  optimizer_service.rs  sign_url_service.rs  token_service.rs
src/infra/queue/nats/: image_queue.rs  mod.rs
src/infra/queue/rabbitmq/: image_queue.rs  mod.rs
src/service/: authorization_service.rs  image_service.rs  jwt_token_service.rs  mod.rs  sign_url_service.rs  token_service.rs
src/service/file_storage_service/: minio.rs
src/service/optimizer_service/: rimage.rs
src/validation/: mod.rs  upload_image_validation.rs
user/: config.yml  go.mod  go.sum
user/adapter/adapter-optimizer/: optimizer.go
user/adapter/adapter-redis/: redis.go
user/cmd/http/: main.go
user/cmd/queue/: main.go
user/config/: config.go  load.go
user/delivery/httpserver/: httpserver.go
user/entity/: user.go
user/param/authorizationparam/: param.go
user/param/imageparam/: param.go
user/param/userparam/: register_user.go
user/pkg/httpmsg/: mapper.go
user/pkg/richerror/: richerror.go
user/service/authorizationservice/: service.go
user/service/authservice/: service.go
user/service/imageservice/: service.go
user/service/userservice/: auth.go
user/validator/imagevalidator/: sign_url.go
user/validator/uservalidator/: login.go  register.go  validator.go
(+6 files in other folders)
