[package]
name = "serviceorented"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "*"
lapin = "2.5.0"
async-trait = "0.1.83"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
actix-web = "4"
jsonwebtoken = "9"
env_logger= "0.11.6"
actix-multipart = "0.7.2"
figment = { version = "0.10", features = ["yaml", "env"] }
