[package]
name = "serviceorented"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "*"
lapin = "2.5.0"
async-trait = "0.1.85"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
actix-web = "4"
jsonwebtoken = "9"
env_logger= "0.11.6"
actix-multipart = "0.7.2"
figment = { version = "0.10", features = ["yaml", "env"] }
clap = { version = "4.5.23", features = ["derive"] }

rimage = { version="0.11.0-next.3", default-features = true, features = ["icc"]}

zune-core = "0.5.0-rc2"

async-nats = "0.38.0"
aws-sdk-s3 = "1.68.0"
aws-config = {  version = "1.5.13", features = ["behavior-version-latest"] }


fast_image_resize = { version = "3.0.4" }
zune-imageprocs = { version = "0.5.0-rc0", features = [
    "exif",
]}
libavif = { version = "0.14.0", default-features = false, features = [
    "codec-aom",
] }

zune-image = { version = "0.5.0-rc0" }



[[bin]]
name = "queue"
path = "src/bin/queue/main.rs"

[[bin]]
name = "http"
path = "src/bin/http/main.rs"

